--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,14 @@ p {
 
 /* header */
 
+.container{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  
+
+}
+
+
 #logo {
   float: left;
   margin-right: 10px;
@@ -192,4 +200,16 @@ aside {
 
 .gravatar_edit {
   margin-top: 15px;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
 }
