work on the cart 21.29

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,1 +1,49 @@
-<h1>Shopping Cart</h1>
+<h1>Your Cart</h1>
+
+<% if @cart.empty? %>
+    <p>Your Cart is empty.</p>
+<% end %>
+
+<% total = 0 %>
+	
+<table class="cart">
+    <tr>
+        <td class="legend"></td>
+        <td class="legend">Product</td>
+        <td class="legend">Price</td>
+        <td class="legend">Qty</td>
+        <td class="legend">Total</td>
+    </tr>
+	
+<% @cart.each do | id, quantity | %>
+    <% product = Product.find_by_id(id) %>
+    <tr>
+        <td>
+            <div class="image">
+                <%= link_to (image_tag product.image, :style => "height:40px"), product %>
+            </div>
+        </td>
+        <td class="title"><%= link_to product.title, product %></td>
+        <td class="price"><%= number_to_currency(product.price) %></td>
+        <td class="quantity"><%= quantity %><br /></td>
+        <td class="price">
+        <%= number_to_currency(quantity * product.price, :unit => "£") %>
+    </td>
+    </tr>
+    <% total += quantity * product.price %>
+<% end %>
+
+    <tr>
+        <td colspan="4">
+            <div class="total">Total:</div>
+        </td>
+        <td>
+            <div class="price"><%= number_to_currency(total, :unit => "€") %></div>
+        </td>
+    </tr>
+</table>
+
+<p>
+     <%= link_to 'Continue Shopping', :controller => :products %>
+</p>
+
