--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    The <a href="https://www.google.ie/maps/@41.574155,-87.273284,3a,75y,168.5h,73.17t/data=!3m4!1e1!3m2!1sJFrsNv_uvqX_f3Em7oQ-IQ!2e0!6m1!1e1">Ironworkers</a>
+    are located <a href="https://www.google.ie/maps/@41.574155,-87.273284,3a,75y,168.5h,73.17t/data=!3m4!1e1!3m2!1sJFrsNv_uvqX_f3Em7oQ-IQ!2e0!6m1!1e1">here</a>
   </small>
   <nav>
     <ul>
