--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,12 +31,11 @@
         </div>
         
          <div class="links">
-            <% if session[:login] == 1 %>
+
               <%= link_to 'Edit', edit_product_path(product) %> |
-              <%= link_to 'Delete', product, :confirm => 'Are you sure?', :method => :delete %>
-            <% else %>
+              <%= link_to 'Delete', product, :confirm => 'Are you sure?', :method => :delete %> |
               <a href="/cart/<%= product.id %>">Add to Cart</a><br><br>
-            <% end %>
+
         
         </div>
         
