--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,25 @@
+<p id="notice"><%= notice %></p>
+
 <p>
-    <b><%= @product.title %> </b>
-    <%= @product.description %>
-    €<%= @product.price %>
-    
+  <strong>Title:</strong>
+  <%= @product.title %>
 </p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @product.description %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @product.price %>
+</p>
+
+<p>
+  <strong>Image url:</strong>
+  <%= @product.image %>
+</p>
+
+<%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Back', products_path %> |
+<a href="/cart/<%= @product.id %>">Add to Cart</a> 
