--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,42 @@
 <% provide(:title, "About") %>
-<h1>About</h1>
+
+<hr/>
+
+<h3>About Us ></h3>
+
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  <hr/>
+
+  We've been in the business of supplying architectural ironmongery to tradesmen for over 40 years.
+  We started out as a traditional Ironmonger's shop. Today, we deliver thousands of parcels every week
+  to tradesmen all over the UK. With the UK's biggest range of quality products in stock for next day
+  delivery, free returns, an <b>award winning service and low trade prices</b>, we are the masters of our trade.
+  Our promise is to provide excellent guidance before you buy or specify and exceptional support and service afterwards.
+  Feel free to ask our advice on your projects large and small.
+  
+  <hr/>
+</p>
+
+<div class="myspacing">
+  
+<%= link_to(image_tag("metalwork.jpg", :alt => "Ironmongery logo")) %>
+<%= link_to(image_tag("metalwork2.jpg", :alt => "Ironmongery logo")) %>
+<%= link_to(image_tag("metalwork.jpg", :alt => "Ironmongery logo")) %>
+<%= link_to(image_tag("metalwork3.jpg", :alt => "Ironmongery logo")) %>
+
+</div>
+
+<p>
+<hr/>
+We are an independent ironmonger with one simple objective:
+Complete customer satisfaction at all times
+We achieve this by meeting three simple criteria - Quality, value and Service.
+
+Quality - all our products are scoured on a specification rather than a price basis.
+Value - a lot of our suppliers are highly automated using the latest Robotic technology. We can therefore offer cost effective 
+products without compromising our quality standards. 
+Service - We are a small committed work force with professional and comprehensive product knowledge, all of which is vital to 
+helping you select the right products for a specific project.
+
+<hr/>
 </p>
