--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,10 @@
     
     <% @product.each do |product| %>
     
+        
+    
     <tr>
+        
         <td>
         <div class="image">
             <%= link_to (image_tag product.image, :style => "height:100px"), product %>
@@ -31,17 +34,19 @@
         </div>
         
          <div class="links">
-
+    
+    <% if logged_in? %>
+             <% if current_user.admin? %>
               <%= link_to 'Edit', edit_product_path(product) %> |
               <%= link_to 'Delete', product, :confirm => 'Are you sure?', :method => :delete %> |
+              <% end %>
               <a href="/cart/<%= product.id %>">Add to Cart</a><br><br>
-
+    <% end %>
         
         </div>
-        
-    
     </td>
     </tr>
     
+       
     <% end %>
     </table>
