--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,26 @@
 <div class="center jumbotron">
-  <h1>Welcome to Ironworkers Ltd</h1>
+  
+
+  <h1>
+  <%= link_to(image_tag("doorlock.png", :alt => "Ironmongery logo", :style => "height:100px")) %> 
+  Welcome to Ironworkers Ltd
+  <%= link_to(image_tag("doorlock.png", :alt => "Ironmongery logo", :style => "height:100px")) %> 
+  </h1>
+  
+
 
   <h2>
     Ironworkers uses only the best quality materials. Read more on this 
     <%= link_to "here", about_path %>
   </h2>
-
+  <%if logged_in?%>
+  <%= link_to "Log out now!", logout_path, method: "delete", class: "btn btn-lg btn-primary" %>
+  <%else%>
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%end%>
 </div>
+
+
+
 
 
