--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 
   <h1>
   <%= link_to(image_tag("doorlock.png", :alt => "Ironmongery logo", :style => "height:100px")) %> 
-  Welcome to Ironworkers Ltd
+  Welcome to Iron Workers Ltd
   <%= link_to(image_tag("doorlock.png", :alt => "Ironmongery logo", :style => "height:100px")) %> 
   </h1>
   
