--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
         <%= @user.name %>
       </h1>
        <% if logged_in?%>
-       <% if current_user.admin?%>
+       <% if @user.admin?%>
        <a>Status: Admin-User</a> 
        <% else %>
       <a>Status: Non-Admin User</a>
