--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,14 +113,18 @@ p {
 
 .myheader{
   background-color: black;
-  margin: 0px 110px 0px 110px;
-  padding: 2px 2px 2px 2px;// order - top, right , bottom, left 
+
+  padding: 2px 117px 10px 118px;// order - top, right , bottom, left 
   li {
     font-size: 1.25em;
     font-weight: bold;
   }
 }
 
+
+.myheader li a:hover {
+color: black;
+}
 
 
 /* footer */
