--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,17 +2,18 @@
   <div class="myheader">
     
     <nav>
-    <%= link_to(image_tag("ironworkers.jpg", :alt => "Ironmongery logo", :width => "16%", :height => "16%"), root_path) %>
+
+    <%= link_to(image_tag("ironworkers.jpg", :alt => "Ironmongery logo", :width => "12%", :height => "12%"), root_path) %>
+
     <ul class="nav navbar-nav navbar-right">
 
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Products", products_path %></li>
-        
+      
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li> 
-          <li><%= link_to "Cart", cart_path %></li>
-          
+              <li><%= link_to(image_tag("cart.png", :alt => "cart logo", :width => "10%", :height => "8%"), cart_path) %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
