--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,27 +1,31 @@
 <%= form_for(@product) do |f| %>
 
-  <div class="field">
+<div class= "row">
+  <div class="col-md-6 col-md-offset-3">
+
     <%= f.label :title %><br>
     <%= f.text_field :title %>
-  </div>
+
   
-    <div class="field">
+
     <%= f.label :description %><br>
     <%= f.text_area :description %>
-  </div>
+
   
-   <div class="field">
+
     <%= f.label :price %><br>
     <%= f.text_field :price %>
-  </div>
+
   
-  <div class="field">
+
     <%= f.label :image %><br>
     <%= f.text_field :image %>
-  </div>
+
   
-  <div class="actions">
-    <%= f.submit %>
+
+    <%= f.submit "Confirm Product Changes", class: "btn btn-primary" %>
+
   </div>
+</div>
 
 <% end %>
