--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,7 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.half_page_width{
+.gap-between-pic-and-description{
   margin-left: 50px;
-  margin-bottom: 50px;
+}
+
+.image-products-show{
+  margin-left: 50px;
 }
