--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,7 +40,7 @@
         
       </td>
         <td>
-        <div class="image">
+        <div class="image-products-show">
             <%= link_to (image_tag @product.image, :style => "height:100px"), @product %>
             
         </div>
