--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,6 +133,7 @@ color: black;
 }
 
 
+
 /* footer */
 
 footer {
@@ -228,4 +229,11 @@ aside {
 }
 
 
+/*google search box */
+
+.searchBox { 
+  margin-left:auto;
+  margin-right:auto;
+  width: 55%; 
+}
 
