--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -5,6 +5,11 @@
 
 .gap-between-pic-and-description{
   margin-left: 50px;
+  
+     padding:1px;
+   border:1px solid #545454;
+   background-color: #d7d7d7;
+
 }
 
 .image-products-show{
@@ -15,7 +20,12 @@
 .gap-between-each-product{
   margin-bottom: 20px;
   
+  img { 
+   padding:1px;
+   border:1px solid #545454;
+  }
 }
+
 
 
 
