--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
 <p>
   <hr/>
 
-  We've been in the business of supplying architectural ironmongery to tradesmen for over 40 years.
+  We have been in the business of supplying architectural ironmongery to tradesmen for <b>over 75 years</b>.
   We started out as a traditional Ironmonger's shop. Today, we deliver thousands of parcels every week
   to tradesmen all over the UK. With the UK's biggest range of quality products in stock for next day
   delivery, free returns, an <b>award winning service and low trade prices</b>, we are the masters of our trade.
